<resources>
    <string name="app_name">SSACHackerthon</string>
    <string name="main_bottom_nav_home_title">홈</string>
    <string name="main_bottom_nav_upload_title">업로드</string>
    <string name="main_bottom_nav_feed_title">피드</string>
    <string name="upload_title">업로드하기</string>
    <string name="select_photo">사진을 선택해주세요.</string>
    <string name="gallery">갤러리</string>
    <string name="photo_count_limit">사진은 3장까지만 선택할 수 있습니다.</string>

    <string name="upload_text_content_title">기록</string>
    <string name="tag">태그</string>
    <string name="add_tag">태그 추가하기</string>
    <string name="add_tag_hint">추가할 태그를 입력하세요.</string>
    <string name="add">추가</string>
    <string name="select_emoji">이모지 선택</string>
    <string name="write_complete">작성완료</string>
    <string name="add_complete">추가완료</string>

    <string name="upload_edit_content_hint">오늘은 집에서 어떤 걸 하셨나요? 하루동안 한 일을 간단히 기록해보세요.</string>

</resources>