<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/DefaultTextViewBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/add_tag"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/upload_back_arrow"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginLeft="16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow_left" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/layout_underline"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <EditText
            android:id="@+id/upload_tag_edit_add_tag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:backgroundTint="@color/non"
            android:layout_toLeftOf="@+id/upload_tag_text_add"
            android:hint="@string/add_tag_hint"
            android:textSize="14sp"
            android:maxLength="20"
            android:maxLines="1" />

        <TextView
            style="@style/DefaultTextViewBoldStyle"
            android:id="@+id/upload_tag_text_add"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/tag"
            android:text="@string/add"/>

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/upload_tag_complete"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/button_gray"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/DefaultTextViewBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_complete"
            android:textSize="16sp"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>