<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/DefaultTextViewBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/upload_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/upload_next_arrow"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow_right" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        style="@style/DefaultTextViewBoldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <ImageView
        android:id="@+id/upload_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_recycler">

        <TextView
            android:id="@+id/upload_text_gallery"
            style="@style/DefaultTextViewBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/gallery" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36dp"
            android:layout_toRightOf="@+id/upload_text_gallery"
            android:src="@drawable/arrow_down" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upload_recycler"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>